k8s/vaultwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 8000
      targetPort: http
    - name: websocket
      port: 3012
      targetPort: websocket
