k8s/vaultwarden/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: vaultwarden.prrlvr.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
          - path: /notifications/hub
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: websocket
  tls:
    - hosts:
        - vaultwarden.prrlvr.fr
      secretName: vaultwarden-tls
